--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
-spring.datasource.url = jdbc:mysql://username:password@minecraft.net:3306/schemaName?serverTimezone=UTC
-spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-
+spring.datasource.url=jdbc:mysql://username:password@minecraft.net:3306/schemaName?serverTimezone=UTC
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 server.port=5000
+# Session
+spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=always
+# How long does a session last without activity, in seconds
+spring.session.timeout=900
