--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,15 @@
+server.port=5000
+# Database connection
 spring.datasource.url=jdbc:mysql://username:password@minecraft.net:3306/schemaName?serverTimezone=UTC
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-server.port=5000
 # Session
 spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
 # How long does a session last without activity, in seconds
 spring.session.timeout=900
+# Logging with a roll over every day
+logging.file.name=logs/treecreate.log
+logging.pattern.rolling-file-name=logs/treecreate-%d{yyyy-MM-dd}.%i.log.gz
+logging.file.max-size=100MB
+logging.file.total-size-cap=2GB
+logging.file.max-history=60
