--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=5000
 # Database connection
-spring.datasource.url=jdbc:mysql://username:password@minecraft.net:3306/schemaName?serverTimezone=UTC
+spring.datasource.url=${TREECREATE_JDBC_URL}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Session
 spring.session.store-type=jdbc
