--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,7 +11,7 @@ on:
     branches: [ production ]
 
 jobs:
-  build:
+  Package_and_Test:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -19,7 +19,51 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 11
+
     - name: Build with Maven
       run: mvn -B package --file pom.xml
       env:
         TREECREATE_JDBC_URL: ${{ secrets.TREECREATE_JDBC_URL }}
+
+    - name: Upload packaged jar
+      uses: actions/upload-artifact@v2
+      with:
+        name: project.jar
+        path: target/*.jar
+        
+  Run_Functional_Tests:
+    runs-on: ubuntu-latest
+    needs: Package_and_Test
+    steps:
+    - uses: actions/checkout@v2
+      
+    - name: Install Google Chrome
+      run: |
+        chmod +x ./scripts/installChrome.sh
+         ./scripts/installChrome.sh
+
+    - name: Download package.jar artifact
+      uses: actions/download-artifact@v2
+      with:
+        name: project.jar
+      
+    - name: Convert the jar to a runnable version
+      run: mv *.jar project.jar
+             
+    - name: Set up JDK 11
+      uses: actions/setup-java@v1
+      with:
+        java-version: 11
+    
+    - name: Run the Webserver
+      run: java -jar project.jar &
+      env:
+        TREECREATE_JDBC_URL: ${{ secrets.TREECREATE_JDBC_URL }}
+    
+    - name: Wait 30 seconds
+      uses: jakejarvis/wait-action@master
+      with:
+        time: '30s'
+     
+    - name: Run Functional tests
+      run: mvn --no-transfer-progress -Dtest=dev.hotdeals.treecreate.functional_tests.** test 
