--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ logging.pattern.rolling-file-name=logs/treecreate-%d{yyyy-MM-dd}.%i.log.gz
 logging.file.max-size=100MB
 logging.file.total-size-cap=2GB
 logging.file.max-history=60
+
+spring.messages.encoding=ISO-8859-1
