--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,5 @@ logging.file.total-size-cap=2GB
 logging.file.max-history=60
 
 spring.messages.encoding=ISO-8859-1
+
+custom.property.nordea-secret=${TREECREATE_NORDEA_SECRET}
