--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=5000
 # Database connection
-spring.datasource.url=${TREECREATE_JDBC_URL}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=${TREECREATE_JDBC_URL_TEST}
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
 # Session
 spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
