--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>dev.hotdeals</groupId>
     <artifactId>treecreate</artifactId>
-    <version>0.7.14</version>
+    <version>0.7.14.b.1</version>
     <name>treecreate</name>
     <description>Springboot-based website for Treecreate project</description>
 
