--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=5000
 # Database connection
-spring.datasource.url=${TREECREATE_JDBC_URL_TEST}
+spring.datasource.url=${TREECREATE_JDBC_URL}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 # Session
