--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,11 @@ logging.file.max-history=60
 spring.messages.encoding=ISO-8859-1
 
 custom.property.nordea-secret=${TREECREATE_NORDEA_SECRET}
+
+# Email sending
+spring.mail.host=send.one.com
+spring.mail.port=587
+spring.mail.password=${TREECREATE_MAIL_PASS}
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
