--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -23,3 +23,13 @@ logging.pattern.rolling-file-name=logs/treecreate-test-%d{yyyy-MM-dd}.%i.log.gz
 logging.file.max-size=5MB
 logging.file.total-size-cap=2GB
 logging.file.max-history=60
+
+# Email sending
+spring.mail.host=send.one.com
+spring.mail.port=587
+spring.mail.password=${TREECREATE_MAIL_PASS}
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
