--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>dev.hotdeals</groupId>
     <artifactId>treecreate</artifactId>
-    <version>0.8.23</version>
+    <version>0.8.24</version>
     <name>treecreate</name>
     <description>Springboot-based website for Treecreate project</description>
 
@@ -114,6 +114,12 @@
             <optional>true</optional>
         </dependency>
 
+        <!-- Email sending -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>2.3.5.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
