--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -24,6 +24,8 @@ logging.file.max-size=5MB
 logging.file.total-size-cap=2GB
 logging.file.max-history=60
 
+custom.property.quickpay-secret=${TREECREATE_QUICKPAY_SECRET}
+
 # Email sending
 spring.mail.host=send.one.com
 spring.mail.port=587
