--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ logging.file.max-history=60
 
 spring.messages.encoding=ISO-8859-1
 
-custom.property.nordea-secret=${TREECREATE_NORDEA_SECRET}
+custom.property.quickpay-secret=${TREECREATE_QUICKPAY_SECRET}
 
 # Email sending
 spring.mail.host=send.one.com
