--- a/Dockerfile-arm
+++ b/Dockerfile-arm
@@ -4,6 +4,10 @@ FROM arm32v7/maven:3.6.3-adoptopenjdk-11 AS MAVEN_BUILD
 COPY ./ ./
 ARG TREECREATE_JDBC_URL=url
 ENV TREECREATE_JDBC_URL=${TREECREATE_JDBC_URL}
+ARG TREECREATE_QUICKPAY_SECRET=secret
+ENV TREECREATE_QUICKPAY_SECRET=${TREECREATE_QUICKPAY_SECRET}
+ARG TREECREATE_MAIL_PASS=password
+ENV TREECREATE_MAIL_PASS=${TREECREATE_MAIL_PASS}
 RUN mvn clean package
 
 FROM arm32v7/openjdk:11-jre
