--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ logging.file.max-size=5MB
 logging.file.total-size-cap=2GB
 logging.file.max-history=60
 
-spring.messages.encoding=ISO-8859-1
+spring.messages.encoding=UTF-8
 
 custom.property.quickpay-secret=${TREECREATE_QUICKPAY_SECRET}
 
