--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -4,5 +4,10 @@
       "name": "custom.property.quickpay-secret",
       "type": "java.lang.String",
       "description": "API key used for quickpay authentication."
-  }
-] }
+    },
+    {
+      "name": "custom.property.environment-type",
+      "type": "java.lang.String",
+      "description": "Environment type the application is deployed in. {production, development}."
+    }
+  ] }
