--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,7 @@ logging.file.max-history=60
 spring.messages.encoding=UTF-8
 
 custom.property.quickpay-secret=${TREECREATE_QUICKPAY_SECRET}
+custom.property.environment-type=${TREECREATE_ENV}
 
 # Email sending
 spring.mail.host=send.one.com
