--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
         <java.version>11</java.version>
     </properties>
 
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
